Fixed alignment of overlay with image

--- a/dev/css/application.css
+++ b/dev/css/application.css
@@ -250,6 +250,9 @@ input {
   max-width: 28em;
   margin-bottom: 1em; }
 
+.align-top {
+  vertical-align: top; }
+
 .img-box {
   position: relative;
   overflow: hidden; }
